--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -14,3 +14,5 @@ springdoc.swagger-ui.configUrl=/v3/api-docs/swagger-config
 springdoc.swagger-ui.url=/v3/api-docs
 springdoc.swagger-ui.operationsSorter=alpha
 springdoc.swagger-ui.tagsSorter=alpha
+# Master Key - lokal only (create e.g. with openssl rand -base64 32)
+encryption.master-key=aRvdZ53Fuwf7nfoT4+VeKPYi4XOhpTSh4eshUfZIgVs=
